--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,58 @@
+* {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: 'Dogica', 'Courier New', Courier, monospace;
+}
+
+@font-face {
+  font-family: Dogica;
+  src: url(../fonts/Dogica.ttf);
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #393053;
+  background-color: #393053;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5%;
+  height: 10vh;
+}
+
+nav li {
+  display: inline;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+#hero {
+  height: 90vh;
+  background-image: url(../img/parallax-mountain.png);
+  background-size: contain;
+  text-align: center;
+}
+
+#hero h2,
+#hero h3 {
+  position: relative;
+  top: 33%;
+  text-shadow: 3px 3px 5px black;
+
+}
+
+h2 {
+  text-transform: uppercase;
+  font-size: 400%;
+  margin-bottom: 20px;
+}
+
+h3 {
+  line-height: 1.5;
 }
 
