--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,3 +142,54 @@ h3 {
 #first {
   font-size: 200%;
 }
+
+.contact-links {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#linkedin,
+#github {
+  width: 25%;
+  height: auto;
+}
+
+#email {
+  width: 13%;
+  height: auto;
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+}
+
+.icon:hover {
+  transition: 0.5s;
+  filter: invert(97%) sepia(69%) saturate(0%) hue-rotate(284deg) brightness(117%) contrast(100%);
+}
+
+#avatar {
+  width: 10%;
+  height: auto;
+  position: fixed;
+  right: 0;
+  bottom: -50px;
+  opacity: 0.5;
+  transition: 0.5s;
+}
+
+#avatar:hover {
+  bottom: 0;
+  opacity: 1;
+  transition: 0.5s;
+}
