--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  background-color: #4f4961;
+  background: linear-gradient(90deg, rgba(66,62,79,1) 0%, rgba(90,84,115,1) 36%, rgba(91,89,112,1) 100%);
 }
 
 header {
@@ -25,6 +25,8 @@ header {
   align-items: center;
   padding: 0 5%;
   height: 10vh;
+  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.30);
+  position: relative;
 }
 
 nav li {
