--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ header {
   position: relative;
 }
 
+h1 {
+  font-size: 200%;
+}
+
 nav li {
   display: inline;
   margin-left: 15px;
@@ -37,6 +41,7 @@ nav li {
 nav a {
   text-decoration: none;
   transition: 0.5s;
+  color: white;
 }
 
 nav a:hover {
@@ -65,6 +70,10 @@ h2 {
   text-transform: uppercase;
   font-size: 400%;
   margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 120%;
 }
 
 .content {
@@ -253,6 +262,17 @@ a:hover + .tooltip {
   bottom: 100px;
   opacity: 1;
   transition: 0.5s;
+}
+
+.modal-title,
+.modal-body > p {
+  color: black;
+}
+
+.modal-title,
+.modal-body > p,
+.modal-body > p > a {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* make proj titles smaller when window is smaller */
